# shaper

./: .dockerignore  .gitignore  .goreleaser.yml  Birth Data.sql  CONTRIBUTING.md  Dockerfile  README.md  docker-entrypoint.sh  go.mod  go.sum  index.html  main.go  package-lock.json  package.json  tailwind.config.js  test.sql  vite.config.ts  vite.embed-react.ts  vite.embed-standalone.ts  vite.embed.ts  warehouse.duckdb
.github/: FUNDING.yml  dependabot.yml
comms/: comms.go  logger.go
core/: auth.go  core.go  create_dashboard.go  custom_types.go  dashboard.go  delete_dashboard.go  edit_dashboard.go  events.go  get_dashboard.go  keys.go  list_dashboards.go  sample.go  stream_query.go  users.go
dashboards/: Birth Data.sql
embedding-example/: index.html  index.js
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
ingest/: ingest.go  ingest_test.go
metrics/: metrics.go
npm/: index.js  install.js  package.json  shaper.js  uninstall.js
npm-package/: README.md  index.js  install.js  package.json  uninstall.js
pip-package/: MANIFEST.in  README.md  pyproject.toml  setup.py
pip-package/shaper_pkg/: __init__.py  cli.py  install.py  uninstall.py
server/: caching.go  frontend.go  routes.go  server.go
src/: App.tsx  auth.tsx  embed-react.tsx  embed-standalone.tsx  embed.tsx  index.css  main.tsx  routeTree.gen.ts
ui/: eslint.config.js  index.html  postcss.config.js  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vite.embed.ts
util/: util.go
web/: caching.go  frontend.go  routes.go  view.html  (+1 more)
(+282 files in other folders)
